# rust-macros

./: Cargo.toml
app/: Cargo.toml  config.yaml
app/src/: builder_usage.rs  compose.rs  macro_rules.rs  main.rs  panic_to_result.rs  private.rs  public.rs
app/tests/: builder_usage_tests.rs  config_usage_tests.rs  public_usage_tests.rs
app/tests/fails/: build_defaults_without_default.rs  build_defaults_without_default.stderr  build_enum.stderr  build_struct_unnamed.rs  build_struct_unnamed.stderr  build_with_missing_setters.rs  build_with_missing_setters.stderr  panic_return_result.rs  panic_return_result.stderr  panic_two_errors.rs  panic_two_errors.stderr  panic_without_message.rs  panic_without_message.stderr
builder-code/: Cargo.toml
builder-code/src/: fields.rs  lib.rs  util.rs
builder-macro/: Cargo.toml
builder-macro/src/: lib.rs
config-macro/: Cargo.toml  README.md
config-macro/src/: input.rs  lib.rs  output.rs  output_struct.rs
panic-to-result-macro/: Cargo.toml
panic-to-result-macro/src/: lib.rs
proc-macro/: Cargo.toml
proc-macro-attr/: Cargo.toml
proc-macro-attr/src/: lib.rs  public.rs  public2.rs
proc-macro-derive/: Cargo.toml
proc-macro-derive/src/: lib.rs
proc-macro/src/: compose.rs  lib.rs  private.rs
