[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro-derive = { path = '../proc-macro-derive' }
proc-macro-attr = { path = '../proc-macro-attr' }
proc-macro = { path = '../proc-macro' }
builder-macro = { path = '../builder-macro' }
panic-to-result-macro = { path = '../panic-to-result-macro' }
trybuild = "1.0.99"
