[package]
name = "config-macro"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/sergey-tihon/rust-macros"
readme = "README.md"
description = "Macros for using config as a struct within your app"
license = "MIT"
homepage = "https://github.com/sergey-tihon/rust-macros"
keywords = ["configuration", "yaml", "macro"]

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.77", features = ["extra-traits"] }
proc-macro2 = "1.0.86"
serde = "1.0.210"
serde_yaml = "0.9.34"

[lib]
proc-macro = true

[features]
default = ["functional"]
struct = []
functional = []
